# GithubActionsWithStack

./: GithubActionWithStack.cabal  GithubActionsWithStack.cabal  README.md  about.html  about.rst  archive.html  cabal.project  contact.html  index.html  stack.yaml
.github/workflows/: build-delploy.yml
.stack-work/: stack.sqlite3
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
templates/: default.html
