name:                GithubActionWithStack
version:             0.1.0.0
-- synopsis:
-- description:
author:              Sascha Bubeck
maintainer:          bubecksascha@t-online.de
copyright:           2021 Sascha Bubeck
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
